Behavior for preloaded image to appear behind the zoomed in image on zoom in, to fix ff blinking bug

--- a/css/main.less
+++ b/css/main.less
@@ -23,7 +23,7 @@
   -moz-backface-visibility:hidden;
   -ms-backface-visibility:hidden;
   */
-}
+}git atatu
 .amp-progress{
   position:absolute;
   top:0;
@@ -42,7 +42,7 @@
   -o-user-select: none;
 }
 
-.amp-zoom,.amp-zoomed,.amp-zoomed-container {
+.amp-zoom,.amp-zoomed,.amp-zoomed-clone,.amp-zoomed-container {
   user-drag:none;
   -webkit-user-drag:none;
   -moz-user-select: none;
@@ -182,7 +182,7 @@ z-index:9999;
     background: #a9a9a9;
   }
 }
-.amp-zoomed {
+.amp-zoomed,.amp-zoomed-clone {
   display:block;
   position:absolute!important;
   max-width:none!important;
@@ -194,4 +194,10 @@ z-index:9999;
   -webkit-user-select: none;
   -o-user-select: none;
   max-height:none!important;
+}
+.amp-zoomed-clone{
+  z-index:1 !important;
+}
+.amp-zoomed-clone.amp-hidden{
+  display:none;
 }
